--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
   </section>
 
   <section id="menu" class="menu-section parallax-bg">
-    <h2 class="section-title">Menu et Actualités</h2>
+    <h2 class="section-title">Menu et Nouveautés</h2>
 
     <div class="menu-actualidade-container">
 
@@ -910,6 +910,7 @@ document.querySelectorAll('#menu .zoom-static img').forEach(img => {
   
 </body>
 </html>
+
 
 
 
