--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Le Fournil de Prosper  à Rennes</title>
+  <title>Le Fournil de Prosper à Rennes</title>
 
   <meta name="description"
     content="Le Fournil de Prosper située au 42 rue champion de cicé, Rennes, France. Pains, viennoiseries, pâtisseries, galettes, bûches et créations maison. Commandes au 02 23 48 80 05.">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Le Fournil de Prosper">
   <meta name="keywords"
-    content="boulangerie Rennes, pâtisserie Rennes, artisan boulanger Rennes, viennoiseries Rennes, galette des rois Rennes, bûches de Noël Rennes, L'Instant Gourmand Rennes, pain artisanal Rennes, pâtisseries artisanales Rennes">
+    content="boulangerie Rennes, pâtisserie Rennes, artisan boulanger Rennes, viennoiseries Rennes, galette des rois Rennes, bûches de Noël Rennes, Le Fournil de Prosper Rennes, pain artisanal Rennes, pâtisseries artisanales Rennes">
 
   <meta property="og:title" content="Le Fournil de Prosper – Boulangerie & Pâtisserie à Rennes">
   <meta property="og:description"
@@ -42,8 +42,8 @@
   "servesCuisine": "Boulangerie, Pâtisserie",
   "url": "https://www.tudominio.fr",
   "sameAs": [
-    "https://www.instagram.com/instantgourmand35",
-    "https://www.facebook.com/p/LInstant-Gourmand-100089331460940/"
+    "https://www.instagram.com/lefournildeprosper?fbclid=IwY2xjawPF11lleHRuA2FlbQIxMABicmlkETBFZ2wyM2V1T0pzUjQ3MWdoc3J0YwZhcHBfaWQQMjIyMDM5MTc4ODIwMDg5MgABHioizkf-dqNi35OCjAttWK",
+    "https://www.facebook.com/lefournildeprosper/?locale=fr_FR"
   ]
 }
   </script>
@@ -910,6 +910,7 @@ document.querySelectorAll('#menu .zoom-static img').forEach(img => {
   
 </body>
 </html>
+
 
 
 
