--- a/index.html
+++ b/index.html
@@ -523,7 +523,44 @@
       background: #d4a373 !important;
       color: #ffffff !important;
     }
+    .lead-form {
+     display: flex;
+     flex-direction: column;
+     gap: 12px;
+     width: 100%;
+     max-width: 500px;
+     margin: 0 auto;
+   }
 
+  .lead-form input,
+  .lead-form textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+   }
+
+  .lead-form textarea {
+    min-height: 120px;
+    resize: vertical;
+  }
+
+  .lead-form button {
+    background: #d4a373;
+    color: white;
+    padding: 14px;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+
+ .lead-form button:hover {
+   background: #c48c5f;
+ }
+ 
     /* mobile layout */
     @media (max-width: 768px) {
       .contact-row {
@@ -623,8 +660,15 @@
         font-size: 15px !important;
         padding: 20px !important;
       }
-    }
-    
+      
+      .lead-form input,
+      .lead-form textarea,
+      .lead-form button {
+       font-size: 15px;
+       padding: 12px;
+     }
+   }
+
     @media (min-width: 769px) {
       .menu-actualidade-container {
         display: flex;
@@ -805,6 +849,24 @@
       <p><strong>Téléphone :</strong> 02 99 67 31 73</p>
       <p><strong>Email :</strong> prosperorriere35@gmail.com</p>
 
+      <form action="https://formsubmit.co/EL_EMAIL_DEL_CLIENTE" method="POST" class="lead-form">
+
+        <input type="text" name="name" placeholder="Votre nom" required>
+
+       <input type="email" name="email" placeholder="Votre email" required>
+
+       <input type="text" name="phone" placeholder="Votre téléphone" required>
+
+       <textarea name="message" placeholder="Votre message" required></textarea>
+
+  <button type="submit">Envoyer</button>
+
+  <!-- Opciones invisibles -->
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_template" value="table">
+
+</form>
+
       <div class="social-icons">
         <a href="https://www.facebook.com/lefournildeprosper/?locale=fr_FR" target="_blank" aria-label="Facebook">
           <i class="fa-brands fa-facebook"></i>
@@ -910,6 +972,7 @@ document.querySelectorAll('#menu .zoom-static img').forEach(img => {
   
 </body>
 </html>
+
 
 
 
