--- a/index.html
+++ b/index.html
@@ -847,9 +847,9 @@
     <div class="glass-card" style="max-width:700px;margin:0 auto;text-align:center;">
       <p><strong>Adresse :</strong> 42 rue champion de cicé, Rennes, France</p>
       <p><strong>Téléphone :</strong> 02 99 67 31 73</p>
-      <p><strong>Email :</strong> prosperorriere35@gmail.com</p>
+      
 
-      <form action="https://formsubmit.co/EL_EMAIL_DEL_CLIENTE" method="POST" class="lead-form">
+      <form action="https://formsubmit.co/prosperorriere35@gmail.com" method="POST" class="lead-form">
 
         <input type="text" name="name" placeholder="Votre nom" required>
 
@@ -972,6 +972,7 @@ document.querySelectorAll('#menu .zoom-static img').forEach(img => {
   
 </body>
 </html>
+
 
 
 
