--- a/index.html
+++ b/index.html
@@ -539,7 +539,8 @@
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 16px;
-   }
+    margin-bottom: 12px; 
+  }
 
   .lead-form textarea {
     min-height: 120px;
@@ -972,6 +973,7 @@ document.querySelectorAll('#menu .zoom-static img').forEach(img => {
   
 </body>
 </html>
+
 
 
 
